--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "水道メーター読み取りアプリ",
   "short_name": "メーター読み取り",
   "description": "水道メーターの読み取りを管理するアプリケーション",
-  "start_url": "/property_select.html",
+  "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#007bff",
